snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/maven-metadata.xml.sha256
dae2497002e89ee071786e6527fb4ebdac48e6249b494d3512e9189c439a2fd5